Apply suggestions from code reviews
Co-authored-by: Lucas Welscher <Strohgelaender@users.noreply.github.com>
Co-authored-by: Johannes Stöhr <JohannesStoehr@users.noreply.github.com>